--- a/app/scss/modules/about-us.scss
+++ b/app/scss/modules/about-us.scss
@@ -29,7 +29,7 @@
 
     &-text {
       display: inline-block;
-      margin-bottom: 40px;
+      margin-bottom: 64px;
 
       font-family: $main-ff-bold;
       font-size: 36px;
@@ -41,9 +41,9 @@
       }
 
       @include sm {
-        padding-top: 20px;
+        padding-top: 106px;
         font-size: 20px;
-        line-height: 38px;
+        line-height: 36px;
       }
 
       &__link {
@@ -62,10 +62,15 @@
         }
 
         @include xs {
-          &:last-of-type {
-            height: 68px;
+          &:first-of-type {
+            height: 31px;
           }
         }
+        // @include xs {
+        //   &:last-of-type {
+        //     height: 68px;
+        //   }
+        // }
       }
 
       .about-content-text__part {
@@ -116,10 +121,10 @@
 
   &__mobile-img {
     display: none;
-
+    
     @include sm {
-      width: 100%;
-      display: block;
+      // width: 100%;
+      // display: block;
     }
   }
 }
@@ -151,6 +156,11 @@
       min-width: 368px;
       margin-right: 64px;
 
+      @include sm {
+        font-size: 30px;
+        line-height: 40px;
+      }
+
       &__part {
         display: inline-block;
 
@@ -174,7 +184,7 @@
     }
 
     &__text:last-of-type {
-      margin-bottom: 60px;
+      margin-bottom: 64px;
     }
 
     &_1 {
