--- a/app/scss/modules/footer.scss
+++ b/app/scss/modules/footer.scss
@@ -5,7 +5,7 @@
   &-content {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     padding-right: 24px;
 
     &__logo {
