--- a/app/scss/modules/solutions.scss
+++ b/app/scss/modules/solutions.scss
@@ -104,15 +104,27 @@ $listItemMargin: 10px;
           // Hover
           &:nth-child(1):hover .solutions-grid-item__caption::before {
             content: url(../images/solutions/white/machine-learning.svg);
+            @include md {
+              content: url(../images/solutions/blue/machine-learning.svg);
+            }
           }
           &:nth-child(2):hover .solutions-grid-item__caption::before {
             content: url(../images/solutions/white/embedded-development.svg);
+            @include md {
+              content: url(../images/solutions/blue/embedded-development.svg);
+            }
           }
           &:nth-child(3):hover .solutions-grid-item__caption::before {
             content: url(../images/solutions/white/data-processing.svg);
+            @include md {
+              content: url(../images/solutions/blue/data-processing.svg);
+            }
           }
           &:nth-child(4):hover .solutions-grid-item__caption::before {
             content: url(../images/solutions/white/visualisations.svg);
+            @include md {
+              content: url(../images/solutions/blue/visualisations.svg);
+            }
           }
         }
       }
