--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -40,7 +40,7 @@
     @include md {
       padding-right: 40px;
     }
-    @include sm {
+    @include lg {
       padding-right: 25px;
       text-transform: none;
     }
