--- a/app/scss/modules/technology.scss
+++ b/app/scss/modules/technology.scss
@@ -2,7 +2,7 @@
   padding-bottom: 145px;
   padding-top: 130px;
   background-color: $mainDark;
-  
+
   @include md {
     padding-bottom: 80px;
     padding-top: 70px;
@@ -82,6 +82,11 @@
         width: 24px;
         top: -39px;
         background-repeat: no-repeat;
+
+        @include md {
+          left: -36px;
+          top: 2px;
+        }
       }
 
       &__caption {
