arrow buttons animation + main nav animation slover

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -444,6 +444,9 @@ body {
   overflow-x: hidden;
   background-color: #111111; }
 
+button {
+  padding: 0; }
+
 img {
   max-width: 100%; }
 
@@ -504,6 +507,7 @@ main {
     opacity: 1; } }
 
 .blue-link {
+  max-width: 300px;
   display: block;
   position: relative;
   padding-left: 36px;
@@ -511,9 +515,12 @@ main {
   font-size: 16px;
   letter-spacing: 1.14px;
   line-height: 25px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  white-space: nowrap;
+  transition: all 0.5s; }
   .blue-link:hover {
-    cursor: pointer; }
+    cursor: pointer;
+    transform: translateX(10px); }
   .blue-link:before {
     content: "";
     display: block;
@@ -522,7 +529,35 @@ main {
     top: 12px;
     height: 1px;
     width: 20px;
-    background: #0052FF; }
+    background: #0052FF;
+    transition: all 0.5s; }
+  .blue-link:hover:before {
+    transition: all 0.5s; }
+
+.blue-link:hover .blue-link-arrow__top-part,
+.blue-link:hover .blue-link-arrow__bottom-part {
+  opacity: 1; }
+
+.blue-link-arrow__top-part,
+.blue-link-arrow__bottom-part {
+  opacity: 0;
+  display: block;
+  position: absolute;
+  left: 11px;
+  top: 8px;
+  height: 1px;
+  width: 10.5px;
+  background: #0052ff;
+  transition: all 0.5s;
+  transform: rotate(50deg); }
+
+.solutions-grid-item__link .blue-link-arrow__top-part,
+.solutions-grid-item__link .blue-link-arrow__bottom-part {
+  background: #fff; }
+
+.blue-link-arrow__bottom-part {
+  top: 16px;
+  transform: rotate(-50deg); }
 
 .slider {
   padding-top: 140px;
@@ -944,7 +979,7 @@ main {
         font-size: 14px;
         letter-spacing: 1px;
         line-height: 21px;
-        transition: color 0.35s ease; }
+        transition: color 0.5s ease; }
         @media (max-width: 360px) {
           .header .navigation-desktop__item {
             font-size: 30px;
@@ -960,7 +995,7 @@ main {
           bottom: 0;
           height: 1px;
           width: 0;
-          transition: width 0s ease, background 0.35s ease; }
+          transition: width 0s ease, background 0.5s ease; }
         .header .navigation-desktop__item:after {
           content: "";
           display: block;
@@ -970,13 +1005,13 @@ main {
           height: 1px;
           width: 0;
           background: #0052FF;
-          transition: width 0.35s ease; }
+          transition: width 0.5s ease; }
         .header .navigation-desktop__item:hover:before {
           width: 20px;
           background: #0052FF;
-          transition: width 0.35s ease; }
+          transition: width 0.5s ease; }
         .header .navigation-desktop__item:hover:after {
-          width: 100%;
+          width: 80%;
           background: transparent;
           transition: all 0s ease; }
     .header .navigation-mobile {
@@ -1610,7 +1645,7 @@ main {
       .technology-grid-item:hover .technology-grid-item__caption {
         margin-bottom: 60px; }
       .technology-grid-item:hover .technology-grid-item__link {
-        display: inline; }
+        display: block; }
         @media (max-width: 768px) {
           .technology-grid-item:hover .technology-grid-item__link {
             display: none; } }
@@ -1621,6 +1656,9 @@ main {
             margin-bottom: 0; } }
       .technology-grid-item:hover .technology-grid-item__text {
         color: #fff; }
+
+.technology-grid-item:hover .technology-grid-item__caption:after {
+  display: none; }
 
 .contact {
   background-color: #fff;
@@ -1802,13 +1840,13 @@ main {
           right: 0;
           bottom: 0;
           z-index: 5;
-          padding: 10px 28px 10px 10px; }
+          padding: 10px 18px 10px 10px; }
           .contact-content-form .form-textarea-box__btn:after {
-            content: url(../../images/icon/arrow-right-blue.svg);
+            content: url(../../images/icon/arrow-right-blue_short.svg);
             display: block;
             position: absolute;
-            right: -6px;
-            top: 12px; }
+            right: 0px;
+            top: 9px; }
       .contact-content-form .form-radio-box-lable__link {
         text-decoration: underline;
         color: #8B8B8B; }
@@ -2096,16 +2134,15 @@ main {
       outline: none; }
       @media (max-width: 576px) {
         .contact-page .form .home__startbtn.blue-link {
-          margin: 0;
-          padding-left: 0; }
+          margin: 0; }
           .contact-page .form .home__startbtn.blue-link::before {
             content: none; }
           .contact-page .form .home__startbtn.blue-link::after {
-            content: url(../../images/icon/arrow-right-blue.svg);
+            content: url(../../images/icon/arrow-blue.svg);
             display: block;
             position: absolute;
-            right: -27px;
-            top: 3px; } }
+            left: 0px;
+            top: 0px; } }
   @media (max-width: 360px) {
     .contact-page [type="checkbox"]:checked + label,
     .contact-page [type="checkbox"]:not(:checked) + label {
